# ai-dial-models-parameters

./: pyproject.toml
task/: 1-task-models.py  2-task-n.py  3-task-temperature.py  4-task-seed.py  5-task-max_tokens.py  6-task-frequency_penalty.py  7-task-presence_penalty.py  8-task-stop.py
